--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="w3-light-grey">
 
   <!-- Page Container -->
-  <div class="w3-content w3-margin-top" style="max-width:1400px;">
+  <div class="w3-content w3-margin-top" style="max-width:1360px;">
 
     <!-- The Grid -->
     <div class="w3-row-padding">
@@ -100,22 +100,22 @@
               class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Skillup Courses. PHP-development.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2019-03.2020</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2019 - 03.2020</h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Learn.by education platform. Software testing introduction.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2020-02.2020</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2020 - 02.2020</h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>ITVDN education platfrom. QA Starter.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>02.2020-03.2020</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>02.2020 - 03.2020</h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Kharkiv Academy of Culture. Choreography Art.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>09.2007-06.2012</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>09.2007 - 06.2012</h6>
             <hr>
           </div>
         </div>
@@ -123,31 +123,32 @@
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+          <h3 class="w3-text-grey w3-padding-16">(no have commercial work experience in IT)</h3>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Chimelong Resort. Performer.Dancer. Guangzhou.China.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2016-11.2019</span></h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2016 - 11.2019</span></h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Tianhan grand theatre. Performer.Dancer. Changsha.China.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2015-05.2016</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2015 - 05.2016</h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Ocean Spring Resort. Performer.Dancer. Xi'an.China.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2013-12.2015</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2013 - 12.2015</h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Slobozhansky Great Song and Dance Ensemble. Artist of Ballet. Kharkiv.Ukraine.</b>
             </h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2011-05.2013</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2011 - 05.2013</h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Kharkiv National Academic Opera and Ballet Theatre. Artist of mass scenes.
                 Kharkiv.Ukraine.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2008-06.2010</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2008 - 06.2010</h6>
             <hr>
           </div>
 
