--- a/index_ru.html
+++ b/index_ru.html
@@ -100,22 +100,22 @@
               class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Образование. Курсы.</h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Skillup Courses. PHP-development.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2019-03.2020</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2019 - 03.2020</h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Learn.by education platform. Software testing introduction.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2020-02.2020</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2020 - 02.2020</h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>ITVDN education platfrom. QA Starter.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>02.2020-03.2020</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>02.2020 - 03.2020</h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>ХДАК. Хореографическое искусство.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>09.2007-06.2012</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>09.2007 - 06.2012</h6>
             <hr>
           </div>
         </div>
@@ -123,30 +123,31 @@
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Опыт Работы</h2>
+          <h3 class="w3-text-grey w3-padding-16">(нет комерческого опыта разработки в сфере IT)</h3>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Chimelong Resort. Performer.Dancer. Гуанчжоу.Китай.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2016-11.2019</span></h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2016 - 11.2019</span></h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Tianhan grand theatre. Performer.Dancer. Чанша.Китай.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2015-05.2016</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2015 - 05.2016</h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Ocean Spring Resort. Performer.Dancer. Сиань.Китай.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2013-12.2015</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2013 - 12.2015</h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>БСАПТ. Артист Балета. Харьков.Украина.</b>
             </h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2011-05.2013</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2011 - 05.2013</h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>ХнАТОБ. Артист массовки. Харьков.Украина.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2008-06.2010</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2008 - 06.2010</h6>
             <hr>
           </div>
 
@@ -172,7 +173,7 @@
 
   <footer class="w3-container w3-teal w3-center w3-margin-top">
     <p>2020</p>
-    <p><a href="index.html" style="text-decoration: none;">Английская версия</a></p>
+    <p><a href="index.html" style="text-decoration: none;">English Version</a></p>
   </footer>
 </body>
 </html>
