--- a/index_ru.html
+++ b/index_ru.html
@@ -1,37 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-172085084-2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-172085084-2');
-</script>
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- <title>Олег Мандриченко</title>
-<style>
-  html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
-</style>
+<head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172085084-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-172085084-2');
+  </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+    html,body,h1,h2,h3,h4,h5 {
+      font-family: "Roboto", sans-serif
+    }
+  </style>
+  <title>Олег Мандриченко</title>
 </head>
 
 <body class="w3-light-grey">
-
-  <!-- Page Container -->
   <div class="w3-content w3-margin-top" style="max-width:1400px;">
-
-    <!-- The Grid -->
     <div class="w3-row-padding">
-
-      <!-- Left Column -->
       <div class="w3-third">
-
         <div class="w3-white w3-text-grey w3-card-4">
           <div class="w3-display-container">
             <div class="w3-display-topleft w3-container w3-text-white">
@@ -40,19 +37,17 @@
             <img src="img/myphoto2.jpg" style="width:100%" alt="Avatar">
           </div>
           <div class="w3-container">
-            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Junior Web-developer (PHP)</p>
-            <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Днепр, Украина</p>
-            <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>mandrik89@gmail.com</p>
-            <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+380953827681</p>
+            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Junior Web-developer (PHP)</p>
+            <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue"></i>Днепр, Украина</p>
+            <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>mandrik89@gmail.com</p>
+            <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue"></i>+380953827681</p>
             <p><a href="https://t.me/Olegan89"><i
                   class="fa fa-telegram fa-fw w3-margin-right w3-xlarge w3-text-blue"></i></a>
               <a href="https://www.linkedin.com/in/oleg-mandrychenko-b55719158/"><i
                   class="fa fa-linkedin w3-margin-right w3-xlarge w3-text-blue"></i></a>
               <a href="https://github.com/OLG-MAN?tab=repositories"><i
                   class="fa fa-github w3-margin-right w3-xlarge w3-text-blue"></i></a></p>
-
             <hr>
-
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Навыки</b></p>
             <p class="w3-large">Уверенные знания</p>
             <p><b>HTML5, CSS3, Bootstrap, SQL, PHP7, OOP.</b></p>
@@ -65,20 +60,13 @@
               <div class="w3-round-xlarge w3-teal" style="height:24px;width:55%"></div>
             </div>
             <p class="w3-large">Опыт использования</p>
-            <p><b> Git, Github, CLI(bash), MySQL, Workbench, phpMyAdmin</b></p>
+            <p><b> Git, Github, CLI terminal(bash), MySQL, Workbench, phpMyAdmin</b></p>
             <div class="w3-light-grey w3-round-xlarge">
               <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
             </div>
-            <!-- <p>Add Skills</p>
-          <p></p> 
-          <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
-          </div> -->
-
             <br>
-
-            <p class="w3-large w3-text-theme"><b><i
-                  class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Языки</b></p>
+            <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Языки</b>
+            </p>
             <p><b>Английский (B1)</b></p>
             <div class="w3-light-grey w3-round-xlarge">
               <div class="w3-round-xlarge w3-teal" style="height:24px;width:65%"></div>
@@ -99,11 +87,8 @@
             <br>
           </div>
         </div><br>
-
-        <!-- End Left Column -->
       </div>
 
-      <!-- Right Column -->
       <div class="w3-twothird">
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -111,7 +96,7 @@
               class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Образование. Курсы.</h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Skillup Courses. PHP-development.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2019 - 03.2020</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2019 - 04.2020</h6>
             <hr>
           </div>
           <div class="w3-container">
@@ -132,12 +117,21 @@
         </div>
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
+          <h3 class="w3-text-grey w3-padding-16">
+            <i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>О Себе</h3>
+          <h5 class="w3-opacity"><b>Имею большой опыт работы за границей в сфере развлечений и продаж.<br>
+              Ищу должность junior PHP разработчка. Готов обучаться. Готов к адекватной стажировке.<br>
+              Ищу интересный проект с менторской поддержкой, есть большое желание развиться и стать классным,
+              высококвалифицированный специалистом.<h5></b><br>
+        </div>
+
+        <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Опыт Работы</h2>
           <h3 class="w3-text-grey w3-padding-16">(нет комерческого опыта разработки в сфере IT)</h3>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Chimelong Resort. Performer.Dancer. Гуанчжоу.Китай.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2016 - 11.2019</span></h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2016 - 11.2019</h6>
             <hr>
           </div>
           <div class="w3-container">
@@ -161,25 +155,10 @@
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2008 - 06.2010</h6>
             <hr>
           </div>
-
-          <div class="w3-container w3-margin-bottom">
-            <h3 class="w3-text-grey w3-padding-16">
-                <i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About</h3>
-            <h5 class="w3-opacity"><b>Имею большой опыт работы за границей в сфере развлечений и продаж.<br>
-                Ищу должность junior PHP разработчка. Готов обучаться. Готов к адекватной стажировке.<br>
-                Ищу интересный проект с менторской поддержкой, есть большое желание развиться и стать классным,
-                высококвалифицированный специалистом.<h5></b><br>
-          </div>
-
         </div>
 
-        <!-- End Right Column -->
       </div>
-
-      <!-- End Grid -->
     </div>
-
-    <!-- End Page Container -->
   </div>
 
   <footer class="w3-container w3-teal w3-center w3-margin-top">
@@ -187,4 +166,5 @@
     <p><a href="index.html" style="text-decoration: none;">English Version</a></p>
   </footer>
 </body>
+
 </html>
