content and color fixes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
-    html,body,h1,h2,h3,h4,h5 {
+    html,
+    body,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
       font-family: "Roboto", sans-serif
     }
   </style>
@@ -37,25 +43,24 @@
             <img src="img/myphoto2.jpg" style="width:100%" alt="Avatar">
           </div>
           <div class="w3-container">
-            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Junior Web-developer (PHP)</p>
-            <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue"></i>Dnipro, Ukraine</p>
-            <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>mandrik89@gmail.com</p>
-            <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue"></i>+380953827681</p>
+            <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Dnipro, Ukraine</p>
+            <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>mandrik89@gmail.com</p>
+            <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+380953827681</p>
             <p><a href="https://t.me/Olegan89"><i
-                  class="fa fa-telegram fa-fw w3-margin-right w3-xlarge w3-text-blue"></i></a>
+                  class="fa fa-telegram fa-fw w3-margin-right w3-xlarge w3-text-teal"></i></a>
               <a href="https://www.linkedin.com/in/oleg-mandrychenko-b55719158/"><i
-                  class="fa fa-linkedin w3-margin-right w3-xlarge w3-text-blue"></i></a>
+                  class="fa fa-linkedin w3-margin-right w3-xlarge w3-text-teal"></i></a>
               <a href="https://github.com/OLG-MAN?tab=repositories"><i
-                  class="fa fa-github w3-margin-right w3-xlarge w3-text-blue"></i></a></p>
+                  class="fa fa-github w3-margin-right w3-xlarge w3-text-teal"></i></a></p>
             <hr>
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
             <p class="w3-large">Good Knowledge</p>
-            <p><b>HTML5, CSS3, Bootstrap, SQL, PHP7, OOP.</b></p>
+            <p><b>HTML5, CSS3, Bootstrap, JS(es6+).</b></p>
             <div class="w3-light-grey w3-round-xlarge">
-              <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
+              <div class="w3-round-xlarge w3-teal" style="height:24px;width:75%"></div>
             </div>
             <p class="w3-large">Basic Knowledge</p>
-            <p><b>JS, JQuery, Symfony.</b></p>
+            <p><b>OOP, PHP7, SQL, Symfony.</b></p>
             <div class="w3-light-grey w3-round-xlarge">
               <div class="w3-round-xlarge w3-teal" style="height:24px;width:55%"></div>
             </div>
@@ -93,7 +98,12 @@
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
-              class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+              class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education and Courses</h2>
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>EPAM Frount-end courses.</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>09.2019 - 11.2020</h6>
+            <hr>
+          </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Skillup Courses. PHP-development.</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2019 - 04.2020</h6>
@@ -101,12 +111,12 @@
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Learn.by education platform. Software testing introduction.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2020 - 02.2020</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>02.2020 - 03.2020</h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>ITVDN education platfrom. QA Starter.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>02.2020 - 03.2020</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2020 - 02.2020</h6>
             <hr>
           </div>
           <div class="w3-container">
@@ -121,38 +131,42 @@
             <i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About</h2>
           <h5 class="w3-opacity"><b>I have extensive experience working abroad in the field of entertainment and
               sales. <br>
-              Looking for a Junior developer vacancies (PHP). Ready to learn. Ready to trial period. <br>
-              I’m looking for an interesting project with mentor support, and have a great desire to progress <br>
-              and become a cool, highly qualified specialist.<h5></b><br>
+              Have good basics knowledge of Front-end(JS) and Backend(PHP). Ready to learn. Ready to trial period. <br>
+              I’m looking for an interesting project, and have a great desire to progress and become a cool, highly qualified specialist.<h5></b><br>
         </div>
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Chimelong Resort. Performer.Dancer. Guangzhou.China.</b></h5>
+            <h5 class="w3-opacity"><b>Have my own e-commerce pet project</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>from 06.2020</h6>
+            <hr>
+          </div>
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>Chimelong Resort. Performer. Dancer. Guangzhou. China.</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2016 - 11.2019</h6>
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Tianhan grand theatre. Performer.Dancer. Changsha.China.</b></h5>
+            <h5 class="w3-opacity"><b>Tianhan grand theatre. Performer. Dancer. Changsha. China.</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2015 - 05.2016</h6>
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Ocean Spring Resort. Performer.Dancer. Xi'an.China.</b></h5>
+            <h5 class="w3-opacity"><b>Ocean Spring Resort. Performer. Dancer. Xi'an. China.</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2013 - 12.2015</h6>
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Slobozhansky Great Song and Dance Ensemble. Artist of Ballet. Kharkiv.Ukraine.</b>
+            <h5 class="w3-opacity"><b>Slobozhansky Great Song and Dance Ensemble. Artist of Ballet. Kharkiv. Ukraine.</b>
             </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2011 - 05.2013</h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Kharkiv National Academic Opera and Ballet Theatre. Artist of mass scenes.
-                Kharkiv.Ukraine.</b></h5>
+                Kharkiv. Ukraine.</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2008 - 06.2010</h6>
             <hr>
           </div>
