--- a/index_ru.html
+++ b/index_ru.html
@@ -18,7 +18,13 @@
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
-    html,body,h1,h2,h3,h4,h5 {
+    html,
+    body,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
       font-family: "Roboto", sans-serif
     }
   </style>
@@ -37,25 +43,24 @@
             <img src="img/myphoto2.jpg" style="width:100%" alt="Avatar">
           </div>
           <div class="w3-container">
-            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Junior Web-developer (PHP)</p>
-            <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue"></i>Днепр, Украина</p>
-            <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>mandrik89@gmail.com</p>
-            <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue"></i>+380953827681</p>
+            <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Днепр, Украина</p>
+            <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>mandrik89@gmail.com</p>
+            <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+380953827681</p>
             <p><a href="https://t.me/Olegan89"><i
-                  class="fa fa-telegram fa-fw w3-margin-right w3-xlarge w3-text-blue"></i></a>
+                  class="fa fa-telegram fa-fw w3-margin-right w3-xlarge w3-text-teal"></i></a>
               <a href="https://www.linkedin.com/in/oleg-mandrychenko-b55719158/"><i
-                  class="fa fa-linkedin w3-margin-right w3-xlarge w3-text-blue"></i></a>
+                  class="fa fa-linkedin w3-margin-right w3-xlarge w3-text-teal"></i></a>
               <a href="https://github.com/OLG-MAN?tab=repositories"><i
-                  class="fa fa-github w3-margin-right w3-xlarge w3-text-blue"></i></a></p>
+                  class="fa fa-github w3-margin-right w3-xlarge w3-text-teal"></i></a></p>
             <hr>
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Навыки</b></p>
             <p class="w3-large">Уверенные знания</p>
-            <p><b>HTML5, CSS3, Bootstrap, SQL, PHP7, OOP.</b></p>
+            <p><b>HTML5, CSS3, Bootstrap, JS(es6+).</b></p>
             <div class="w3-light-grey w3-round-xlarge">
               <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
             </div>
             <p class="w3-large">Базовые знания</p>
-            <p><b>JS, JQuery, Symfony.</b></p>
+            <p><b>OOP, PHP7, SQL, Symfony.</b></p>
             <div class="w3-light-grey w3-round-xlarge">
               <div class="w3-round-xlarge w3-teal" style="height:24px;width:55%"></div>
             </div>
@@ -95,18 +100,23 @@
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Образование. Курсы.</h2>
           <div class="w3-container">
+            <h5 class="w3-opacity"><b>EPAM Frount-end courses.</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>09.2019 - 11.2020</h6>
+            <hr>
+          </div>
+          <div class="w3-container">
             <h5 class="w3-opacity"><b>Skillup Courses. PHP-development.</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2019 - 04.2020</h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Learn.by education platform. Software testing introduction.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2020 - 02.2020</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>02.2020 - 03.2020</h6>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>ITVDN education platfrom. QA Starter.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>02.2020 - 03.2020</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2020 - 02.2020</h6>
             <hr>
           </div>
           <div class="w3-container">
@@ -120,8 +130,8 @@
           <h2 class="w3-text-grey w3-padding-16">
             <i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>О Себе</h2>
           <h5 class="w3-opacity"><b>Имею большой опыт работы за границей в сфере развлечений и продаж.<br>
-              Ищу должность junior PHP разработчка. Готов обучаться. Готов к адекватной стажировке.<br>
-              Ищу интересный проект с менторской поддержкой, есть большое желание развиться и стать классным,
+              Имею базовые знания в web-разработке. <br> Готов обучаться. Готов к адекватной стажировке.<br>
+              Ищу интересный проект, есть большое желание развиться и стать классным,
               высококвалифицированный специалистом.<h5></b><br>
         </div>
 
@@ -129,28 +139,33 @@
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Опыт Работы</h2>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Chimelong Resort. Performer.Dancer. Гуанчжоу.Китай.</b></h5>
+            <h5 class="w3-opacity"><b>Свой собственный e-commerce проект.</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>с 06.2020</h6>
+            <hr>
+          </div>
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>Chimelong Resort. Performer. Dancer. Гуанчжоу. Китай.</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2016 - 11.2019</h6>
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Tianhan grand theatre. Performer.Dancer. Чанша.Китай.</b></h5>
+            <h5 class="w3-opacity"><b>Tianhan grand theatre. Performer. Dancer. Чанша. Китай.</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2015 - 05.2016</h6>
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Ocean Spring Resort. Performer.Dancer. Сиань.Китай.</b></h5>
+            <h5 class="w3-opacity"><b>Ocean Spring Resort. Performer. Dancer. Сиань. Китай.</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2013 - 12.2015</h6>
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>БСАПТ. Артист Балета. Харьков.Украина.</b>
+            <h5 class="w3-opacity"><b>БСАПТ. Артист Балета. Харьков. Украина.</b>
             </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2011 - 05.2013</h6>
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>ХнАТОБ. Артист массовки. Харьков.Украина.</b></h5>
+            <h5 class="w3-opacity"><b>ХнАТОБ. Артист массовки. Харьков. Украина.</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2008 - 06.2010</h6>
             <hr>
           </div>
