--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="w3-display-topleft w3-container w3-text-white">
               <h2>OLEG MANDRYCHENKO</h2>
             </div>
-            <img src="img/myphoto2.jpg" style="width:100%" alt="Avatar">
+            <img src="https://olg-man.github.io/cv/img/myphoto2.jpg" style="width:100%" alt="Avatar">
           </div>
           <div class="w3-container">
             <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Dnipro, Ukraine</p>
@@ -51,23 +51,30 @@
               <a href="https://www.linkedin.com/in/oleg-mandrychenko-b55719158/"><i
                   class="fa fa-linkedin w3-margin-right w3-xlarge w3-text-teal"></i></a>
               <a href="https://github.com/OLG-MAN?tab=repositories"><i
-                  class="fa fa-github w3-margin-right w3-xlarge w3-text-teal"></i></a></p>
+                  class="fa fa-github w3-margin-right w3-xlarge w3-text-teal"></i></a>
+            </p>
             <hr>
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
-            <p class="w3-large">Good Knowledge</p>
-            <p><b>HTML5, CSS3, Bootstrap, JS(es6+).</b></p>
-            <div class="w3-light-grey w3-round-xlarge">
-              <div class="w3-round-xlarge w3-teal" style="height:24px;width:75%"></div>
-            </div>
             <p class="w3-large">Basic Knowledge</p>
-            <p><b>OOP, PHP7, SQL, Symfony.</b></p>
+            <p><b>Languages</b></p>
+            <p>Python 3, JS(es6+), PHP7.</p>
             <div class="w3-light-grey w3-round-xlarge">
-              <div class="w3-round-xlarge w3-teal" style="height:24px;width:55%"></div>
+              <div class="w3-round-xlarge w3-teal" style="height:24px;width:70%"></div>
             </div>
-            <p class="w3-large">Have experience with</p>
-            <p><b> Git, Github, CLI terminal(bash), MySQL, Workbench, phpMyAdmin</b></p>
+            <p><b>Web-technologies. Frameworks.</b></p>
+            <p>HTML5, CSS3, Bootstrap, Symphony.</p>
             <div class="w3-light-grey w3-round-xlarge">
-              <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
+              <div class="w3-round-xlarge w3-teal" style="height:24px;width:60%"></div>
+            </div>
+            <p><b>Techs and tools</b></p>
+            <p>Git, Github, Linux terminal, Bash, MySQL, Workbench.</b></p>
+            <div class="w3-light-grey w3-round-xlarge">
+              <div class="w3-round-xlarge w3-teal" style="height:24px;width:70%"></div>
+            </div>
+            <p><b>Devops technologies and tools</b></p>
+            <p>AWS services, Github actions, Docker, Kubernetes, Ansible</p>
+            <div class="w3-light-grey w3-round-xlarge">
+              <div class="w3-round-xlarge w3-teal" style="height:24px;width:60%"></div>
             </div>
             <br>
             <p class="w3-large w3-text-theme"><b><i
@@ -100,8 +107,13 @@
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education and Courses</h2>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>EPAM Frount-end courses.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>09.2019 - 11.2020</h6>
+            <h5 class="w3-opacity"><b>EPAM DevOps Course.</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2020 - now</h6>
+            <hr>
+          </div>
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>EPAM Frount-end course. 1 stage.</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>09.2020 - 11.2020</h6>
             <hr>
           </div>
           <div class="w3-container">
@@ -119,20 +131,21 @@
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2020 - 02.2020</h6>
             <hr>
           </div>
-          <div class="w3-container">
-            <h5 class="w3-opacity"><b>Kharkiv Academy of Culture. Choreography Art.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>09.2007 - 06.2012</h6>
-            <hr>
-          </div>
         </div>
+
+
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16">
-            <i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About</h2>
-          <h5 class="w3-opacity"><b>I have extensive experience working abroad in the field of entertainment and
-              sales. <br>
-              Have good basics knowledge of Front-end(JS) and Backend(PHP). Ready to learn. Ready to trial period. <br>
-              I’m looking for an interesting project, and have a great desire to progress and become a cool, highly qualified specialist.<h5></b><br>
+            <i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Summary
+          </h2>
+          <h5 class="w3-opacity">
+            <b>I have extensive experience working abroad in the field of entertainment and sales.<br>
+              Now have my own e-commerce project <br>
+              No have commercial experience in IT companies.<br>
+              Ready for trial period on fair terms.<br>
+              I’m looking for an interesting project,
+              and have a great desire to progress and become a cool, highly qualified specialist.</b><br><br>
         </div>
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -140,34 +153,12 @@
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Have my own e-commerce pet project</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>from 06.2020</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>07.2020 - now</h6>
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Chimelong Resort. Performer. Dancer. Guangzhou. China.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2016 - 11.2019</h6>
-            <hr>
-          </div>
-          <div class="w3-container">
-            <h5 class="w3-opacity"><b>Tianhan grand theatre. Performer. Dancer. Changsha. China.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12.2015 - 05.2016</h6>
-            <hr>
-          </div>
-          <div class="w3-container">
-            <h5 class="w3-opacity"><b>Ocean Spring Resort. Performer. Dancer. Xi'an. China.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2013 - 12.2015</h6>
-            <hr>
-          </div>
-          <div class="w3-container">
-            <h5 class="w3-opacity"><b>Slobozhansky Great Song and Dance Ensemble. Artist of Ballet. Kharkiv. Ukraine.</b>
-            </h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2011 - 05.2013</h6>
-            <hr>
-          </div>
-          <div class="w3-container">
-            <h5 class="w3-opacity"><b>Kharkiv National Academic Opera and Ballet Theatre. Artist of mass scenes.
-                Kharkiv. Ukraine.</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.2008 - 06.2010</h6>
+            <h5 class="w3-opacity"><b>Working abroad in the field of entertainment and sales. China. </b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.2013 - 11.2019</h6>
             <hr>
           </div>
         </div>
@@ -178,7 +169,6 @@
 
   <footer class="w3-container w3-teal w3-center w3-margin-top">
     <p>2020</p>
-    <p><a href="index_ru.html" style="text-decoration: none;">Русская версия</a></p>
   </footer>
 </body>
 
