--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <img src="https://olg-man.github.io/cv/img/myphoto2.jpg" style="width:100%" alt="Avatar">
           </div>
-          <div class="w3-container w3-grey">
+          <div class="w3-container">
             <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Dnipro, Ukraine</p>
             <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>mandrik89@gmail.com</p>
             <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+380953827681</p>
@@ -103,7 +103,7 @@
 
       <div class="w3-twothird">
 
-        <div class="w3-container w3-card w3-white w3-margin-bottom w3-grey">
+        <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education and Courses</h2>
           <div class="w3-container">
