--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-blue-grey"></i>DevOps course links</h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>HW Tasks. Github repo.</b></h5>
-            <div><a href="https://github.com/OLG-MAN/DevOps_online_Dnipro_2020Q42021Q1">here</a></div>
+            <div><a href="https://github.com/OLG-MAN/DevOps_online_Dnipro_2020Q42021Q1">Go to repo</a></div>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Final task. Github repo.</b></h5>
             <div class="text-muted text-small mb-2"><a
-                href="https://github.com/OLG-MAN/DevOps_online_Dnipro_2020Q42021Q1/tree/main/project">here</a></div>
+                href="https://github.com/OLG-MAN/DevOps_online_Dnipro_2020Q42021Q1/tree/main/project">Go to repo</a></div>
             <hr>
           </div>
         </div>
@@ -175,7 +175,7 @@
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-blue-grey"></i>Work Experience</h2>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Have my own e-commerce pet project</b></h5>
+            <h5 class="w3-opacity"><b>My own e-commerce project</b></h5>
             <h6 class="w3-text-blue-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>07.2020 - now</h6>
             <hr>
           </div>
